--- a/google.html
+++ b/google.html
@@ -11,13 +11,13 @@
 <body>
 <header>
     <nav>
-        <ul class="header-nav">
+        <ul class="header-navleft">
             <a href="gmail.com">Gmail</a>
             <a href="Images.com" >Images</a>
         </ul>
-        <ul class="header-nav">
-            <img class="header-img"src="dot-icon.jpg" alt="Google apps">
-            <button type="submit">Sign in</button>
+        <ul class="header-navright">
+            <img class="header-img" src="dot-icon.png" alt="Google apps">
+            <img class="header-img" src="pp.jpg" alt="account">
         </ul>
     </nav>
 </header>
