--- a/google.html
+++ b/google.html
@@ -24,9 +24,9 @@
     <section>
         <h1><span style="color: #4285f4">G</span><span style="color: #db4437">o</span><span style="color: #F4B400">o</span><span style="color: #4285f4">g</span><span style="color: #0F9D58">l</span><span style="color: #DB4437">e</span></h1>
         <div class="my-input-container">
-            <img src="search-icon.png" alt="search-icon">
+            <img class="img-1"src="search-icon.png" alt="search-icon">
             <input type="text">
-            <img src="mic-icon.png" alt="mic-icon">
+            <img class="img-2"src="mic-icon.png" alt="mic-icon">
         </div>
         <div class="my-button-container">
             <button class="button-1"><a href="#">Google search</a></button>
