--- a/google.html
+++ b/google.html
@@ -10,19 +10,21 @@
 </head>
 <body>
 <header>
-    <nav>
+    <nav class="header-nav">
         <ul class="header-navleft">
             <a href="gmail.com">Gmail</a>
             <a href="Images.com" >Images</a>
         </ul>
         <ul class="header-navright">
-            <img class="header-img" src="dot-icon.png" alt="Google apps">
-            <img class="header-img" src="pp.jpg" alt="account">
+            <img class="my-apps" src="dot-icon.png" alt="Google apps">
+            <img class="my-profile" src="pp.jpg" alt="account">
         </ul>
     </nav>
 </header>
     <section>
-        <h1><span style="color: #4285f4">G</span><span style="color: #db4437">o</span><span style="color: #F4B400">o</span><span style="color: #4285f4">g</span><span style="color: #0F9D58">l</span><span style="color: #DB4437">e</span></h1>
+        <h1>
+            <span style="color: #4285f4">G</span><span style="color: #db4437">o</span><span style="color: #F4B400">o</span><span style="color: #4285f4">g</span><span style="color: #0F9D58">l</span><span style="color: #DB4437">e</span>
+        </h1>
         <div class="my-input-container">
             <img class="img-1"src="search-icon.png" alt="search-icon">
             <input type="text">
@@ -34,7 +36,8 @@
 </div>
 <p>Google offered in: <a href="#">Luganda</a><a href="#">Kiswahili</a><a href="#">Ikinyarwanda</a> <a href="#">Luo</a><a href="#">Runyakitara</a> </p>
     </section>
-    <footer><h1>Uganda</h1><hr><br>
+    <footer>
+        <h1>Uganda</h1><hr><br>
         <nav class="footer-nav">
             <ul class="footer-left">
                 <a href="a">About</a>
